netcfg (0.56) unstable; urgency=low

  * Petter Reinholdtsen
    - Undo code changes done by Bastian Blank.  They need more testing
      so we only include the translations for beta3.

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 14 Mar 2004 19:50:33 +0100

netcfg (0.55) unstable; urgency=low

  * Bastian Blank
    - Use inet_pton and inet_ntop. Why must people always write its own
      instead of using well tested default functions?
    - Only recalculate gateway if ipaddress or netmask is changed.
    - Never recalculate nameserver.
  * Translations:
    - Kęstutis Biliūnas: Updated Lithuanian translation (lt.po)
    - Jordi Mallach: Updated Catalan translation (ca.po)
    - Giuseppe Sacco: Updated italian translation (it.po)
    - Nikolai Prokoschenko: Russian updates (ru.po)

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 14 Mar 2004 19:22:30 +0100

netcfg (0.54) unstable; urgency=low

  * Strip the binaries again. 

 -- Joey Hess <joeyh@debian.org>  Tue,  9 Mar 2004 15:38:56 -0500

netcfg (0.53) unstable; urgency=low

  * Fix dhcp killer to not segfault if the pid is < 1000 or > 9999.

 -- Joey Hess <joeyh@debian.org>  Tue,  9 Mar 2004 15:01:06 -0500

netcfg (0.52) unstable; urgency=low

  * Joey Hess
    - Fix "search (null)" in /etc/resolv.conf, again, sigh.

 -- Joey Hess <joeyh@debian.org>  Mon,  8 Mar 2004 19:19:30 -0500

netcfg (0.51) unstable; urgency=low

  * Joey Hess
   - Clarify the DHCP retry message to make better sense if you don't know
     what DHCP is.
   - Kill dhcp client before beginning static network config, to keep the
     memory footprint as low as possible.
  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Czech (cs.po) by Miroslav Kure
    - Danish (da.po) by Claus Hindsgaul
    - German (de.po) by Alwin Meschede
    - Greek, Modern (1453-) (el.po) by Konstantinos Margaritis
    - Spanish (Castilian) (es.po) by Javier Fernandez-Sanguino Peña
    - Finnish (fi.po) by Tapio Lehtonen